--- a/src/app/pages/sponsors/components/sponsor-categories-tabs/sponsor-categories-tab.component.scss
+++ b/src/app/pages/sponsors/components/sponsor-categories-tabs/sponsor-categories-tab.component.scss
@@ -15,7 +15,7 @@
         border-right: 1px solid #ccc;
         min-width: 100px;
         text-align: center;
-        color: $mine_grey;
+        color: #212529;
         font-size: 20px;
         height: 100%;
         display: -webkit-box;
