--- a/src/app/pages/sponsors/components/sponsor-category-content/sponsor-category-content-component.html
+++ b/src/app/pages/sponsors/components/sponsor-category-content/sponsor-category-content-component.html
@@ -2,10 +2,20 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-md-12">
-      <dsod-latest [latestTopics]="latestTopics$ | async" [sponsorName]="sponsorName"></dsod-latest>
-    </div>
-    <div class="col-lg-4 col-md-12">
-      <dsod-trending [trendingTopics]="trendingTopics$ | async" [sponsorName]="sponsorName"></dsod-trending>
+      <p class="no-post" *ngIf="(featuredTopics$ | async)?.length<1 && !isLoading">0 Posts Found</p>
     </div>
   </div>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 col-md-12">
+      <dsod-latest [latestTopics]="latestTopics$ | async" [sponsorName]="sponsorName"></dsod-latest>
+      <p class="no-post" *ngIf="(latestTopics$ | async)?.length<1 && !isLoading">0 Posts Found</p>
+    </div>
+    <div class="col-lg-4 col-md-12">
+      <dsod-trending [trendingTopics]="trendingTopics$ | async" [sponsorName]="sponsorName"></dsod-trending>
+      <p class="no-post" *ngIf="(trendingTopics$ | async)?.length<1 && !isLoading">0 Posts Found</p>
+    </div>
+  </div>
+</div>
+<ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="medium" color="#fff" type="ball-scale-multiple"></ngx-spinner>
