--- a/src/app/shared/components/trending-item/trending-item.component.scss
+++ b/src/app/shared/components/trending-item/trending-item.component.scss
@@ -23,17 +23,21 @@
     h4 {
       color: $color-primary;
       font-size: 18px;
+     
 
       &.nbl {
-        color: #ed1b2f
+        color: #ed1b2f;
+         font-weight: bold;
       }
 
       &.gsk {
         color: #f15d22;
+         font-weight: bold;
       }
 
       &.aln {
         color: #3d3935;
+         font-weight: bold;
       }
     }
   }
