--- a/src/app/shared/components/latest/latest.component.html
+++ b/src/app/shared/components/latest/latest.component.html
@@ -10,7 +10,7 @@
       <img *ngIf="latestTopics[0].featuredMedia?.type !== '6'" class="img-fluid" [src]="getImageUrl(latestTopics[0].featuredMedia.code.original)"
         alt="Feautred Thumbnail Large">
       <div *ngIf="latestTopics[0].featuredMedia?.type === '6'" class="img-fluid" [innerHTML]="iFrameCode"></div>
-      <a href="javascript:void(0)" class="read-about">
+      <a *ngIf="latestTopics[0].contentTypeName" href="javascript:void(0)" class="read-about">
         <img src="assets/images/icons/{{latestTopics[0].contentTypeName}}.png" alt="">
       </a>
     </div>
