--- a/src/styles.scss
+++ b/src/styles.scss
@@ -129,8 +129,13 @@ ul, li, ul li {
   }
 }
 .iframe-container {
-  position: relative;
-  min-height: 350px;
+ p{
+   margin: 0;
+   iframe{
+     width: 100%;
+     height: 100%;
+   }
+ }
 }
 
 @media only screen and (min-width:1440px) {
