fixed iframe styling in detail templates

--- a/src/app/pages/article/components/article-media/article-media.component.html
+++ b/src/app/pages/article/components/article-media/article-media.component.html
@@ -16,4 +16,4 @@
     </div>
   </div>
 </div>
-<dsod-feartured-media [featuredMedia]="content.featuredMedia"></dsod-feartured-media>
+<dsod-feartured-media [featuredMedia]="content.featuredMedia" styleFor="header"></dsod-feartured-media>
