--- a/src/app/pages/video/containers/video-page/video-page.component.html
+++ b/src/app/pages/video/containers/video-page/video-page.component.html
@@ -34,7 +34,7 @@
               </div>
             </div>
           </div>
-          <dsod-feartured-media [featuredMedia]="pageContent.featuredMedia"></dsod-feartured-media>
+            <dsod-feartured-media [featuredMedia]="pageContent.featuredMedia" styleFor="header"></dsod-feartured-media>
           <dsod-video-content [content]="pageContent?.content"></dsod-video-content>
           <dsod-gallery [photos]="pageContent?.photos"></dsod-gallery>
           <dsod-references [references]="pageContent?.references"></dsod-references>
