--- a/src/styles.scss
+++ b/src/styles.scss
@@ -138,6 +138,11 @@ ul, li, ul li {
  }
 }
 
+.iframe-wrap{
+   position: relative;
+   padding-top: 57%;
+}
+
 @media only screen and (min-width:1440px) {
   .container {
     max-width: 1380px;
