--- a/src/app/shared/components/latest-item/latest-item.component.scss
+++ b/src/app/shared/components/latest-item/latest-item.component.scss
@@ -66,7 +66,7 @@
   }
   .latest-block-caption {
     background: $regent-gray;
-    padding: 5px 15px;
+    padding: 8px 15px 7px;
     h4 {
       color: $color-white;
       font-size: 20px;
