--- a/src/app/pages/article/components/article-media/article-media.component.html
+++ b/src/app/pages/article/components/article-media/article-media.component.html
@@ -8,11 +8,11 @@
 <div class="article-header" *ngIf="content">
   <div class="row">
     <div class="col-10">
-      <h2>{{content.title}}:</h2>
+      <h2>{{content.title}}</h2>
       <span class="by" *ngIf="content.author">by {{content.author.fullName}}</span>
     </div>
     <div class="col-2">
-      <dsod-content-actions [content]="content"></dsod-content-actions>
+<dsod-content-actions [content]="content" [isLoggedIn]="isLoggedIn"></dsod-content-actions>
     </div>
   </div>
 </div>
