- fixed DSTP-650, DSTP-655, DSTP-656

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -20,19 +20,24 @@
         </ul>
       </div>
       <div class="col-xl-3 col-lg-12 align-self-center">
-        <ul class=" social-links justify-content-center">
+        <ul class="social-links justify-content-center">
           <li>
-            <a url="{{currentUrl}}" shareButton="facebook">
+            <a (click)="onClickSocial('facebook')">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
           </li>
           <li>
-            <a url="{{currentUrl}}" shareButton="twitter">
+            <a (click)="onClickSocial('instagram')">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li>
+            <a (click)="onClickSocial('twitter')">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
           </li>
           <li>
-            <a url="{{currentUrl}}" shareButton="linkedin">
+            <a (click)="onClickSocial('linkedin')">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </li>
