--- a/src/app/shared/components/large-carousel/carousal-item-lg/carousal-item-lg.component.html
+++ b/src/app/shared/components/large-carousel/carousal-item-lg/carousal-item-lg.component.html
@@ -7,7 +7,7 @@
     <div class="slide-content text-center">
       <h2>{{content.title}}</h2>
       <h3>{{content.description}}</h3>
-      <a [routerLink]="['/']" class="learn-more-btn">{{content.actionName}}</a>
+      <a href="javascript:void(0)" class="learn-more-btn" (click)="onLearnMore()">{{content.actionName}}</a>
     </div>
   </div>
 </div>
