--- a/src/app/shared/components/latest-item/latest-item.component.html
+++ b/src/app/shared/components/latest-item/latest-item.component.html
@@ -2,10 +2,13 @@
   <div class="row">
     <div class="col-5">
       <div class="latest-block-thumbnail">
-        <img *ngIf="latestTopic.featuredMedia && latestTopic.featuredMedia.type !== '6'"
+        <img *ngIf="latestTopic.featuredMedia && latestTopic.featuredMedia.type === '1'"
           [src]="getImageUrl(latestTopic.featuredMedia.code.thumbnail)"
           class="img-fluid" alt="Feautred Thumbnail Large"
           (click)="navigateTo(latestTopic)" />
+        <video *ngIf="latestTopic.featuredMedia?.type === '3'" class="featured-video" width="100%" controls>
+          <source [src]="getImageUrl(latestTopic.featuredMedia.code.original)" type="video/mp4">
+        </video>
         <div *ngIf="latestTopic.featuredMedia && latestTopic.featuredMedia.type === '6'"
           class="iframe-container"
           [innerHTML]="iFrameCode">
