--- a/src/app/shared/components/topic/topic.component.scss
+++ b/src/app/shared/components/topic/topic.component.scss
@@ -48,9 +48,13 @@
           object-fit: cover;
           height: 100%;
         }
-      }
-      >video {
-        width: 100%;
+        >video {
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+        }
       }
       a.read-about {
         position: absolute;
