iCW-RK: Fixes for demo.

--- a/src/app/pages/sponsors/components/sponsor-categories-tabs/sponsor-categories-tab.component.html
+++ b/src/app/pages/sponsors/components/sponsor-categories-tabs/sponsor-categories-tab.component.html
@@ -1,8 +1,15 @@
 <div class="tabs-wrapper" [ngClass]="{'logo-aln': sponsorName=='ALN','logo-gsk': sponsorName=='GSK','logo-nbl': sponsorName=='NBL'}">
   <tabset *ngIf="extractedId">
-    <tab (select)="onChangeFilter(null)">
-      <dsod-sponsor-category-content [categoryId]=selectedCategoryId *ngIf="selectedCategoryId==null"></dsod-sponsor-category-content>
-    </tab>
+
+    <div *ngFor="let tabName of getTabNamesForSponsor(sponsorName)">
+      <tab heading="{{tabName}}"  (select)="onChangeFilter(null)">
+        <!-- Tab data needs to be defined in CMS, than populate here -->
+        <!-- TEMP hardcoding the Tab -->
+        <!--<dsod-sponsor-category-content [categoryId]=selectedCategoryId *ngIf="selectedCategoryId==null"></dsod-sponsor-category-content>-->
+      </tab>
+    </div>
+    <dsod-sponsor-category-content [categoryId]=selectedCategoryId *ngIf="selectedCategoryId==null"></dsod-sponsor-category-content>
+
     <tab *ngFor="let tab of (filterTabs$ | async) |sponsored_categories:extractedId" [heading]="tab.name" (select)="onChangeFilter(tab.id)">
       <dsod-sponsor-category-content [categoryId]=selectedCategoryId *ngIf="selectedCategoryId==tab.id"></dsod-sponsor-category-content>
     </tab>
