--- a/src/app/pages/sponsors/components/sponsor-categories-tabs/sponsor-categories-tab.component.scss
+++ b/src/app/pages/sponsors/components/sponsor-categories-tabs/sponsor-categories-tab.component.scss
@@ -55,6 +55,8 @@
         &:first-child {
           .nav-link::before {
             content: url(../../../../../assets/images/sponsor-images/aln-icon-md.png);
+            padding-top: 10px;
+            padding-right: 10px;
           }
         }
       }
