--- a/src/app/pages/terms/terms.component.html
+++ b/src/app/pages/terms/terms.component.html
@@ -4,18 +4,18 @@
     <div class="content">
       <div class="block">
         <div>
-          The information contained in this <b>mobile app</b> is provided to you for informational purposes only.
-          In no event will Next Media Group (hereafter “NMG”) be liable to any party for damages for use of <b>this mobile app</b> or reliance upon any information accessed via it or any other hyperlinked mobile app or mobile app including, but not limited to, damages arising from profits, business interruption, or loss of data, even if NMG is expressly advised about the possibility of such damages.
+          The information contained on this <b>website</b> is provided to you for informational purposes only.
+          In no event will Next Media Group (hereafter “NMG”) be liable to any party for damages for use of <b>this website</b> or reliance upon any information accessed via it or any other hyperlinked website or website including, but not limited to, damages arising from profits, business interruption, or loss of data, even if NMG is expressly advised about the possibility of such damages.
           <br><br>
 
-          The material on <b>this mobile app</b> may be changed, updated, and deleted without notice, and NMG may make improvements and/or changes in the program described in this material at any time.
-          NMG will make commercially reasonable effort to ensure the <b>mobile app</b> will operate uninterrupted or error free, and to correct any material defects presented.
-          NMG does not warrant that <b>this mobile app</b> is compatible with your computer equipment and/or mobile device or that this mobile app is free of viruses, worms, or "trojan horses", and NMG is not liable for any damage you may suffer as a result of such destructive features.
+          The material on <b>this website</b> may be changed, updated, and deleted without notice, and NMG may make improvements and/or changes in the program described in this material at any time.
+          NMG will make commercially reasonable effort to ensure the <b>website</b> will operate uninterrupted or error free, and to correct any material defects presented.
+          NMG does not warrant that <b>this website</b> is compatible with your computer equipment and/or mobile device or that this website is free of viruses, worms, or "trojan horses", and NMG is not liable for any damage you may suffer as a result of such destructive features.
           <br><br>
 
-          Additionally, NMG makes no representations or warranties about any other mobile app that you may choose to access through <b>this mobile app</b>;
-          links provided by NMG to such mobile apps are provided solely for your convenience.
-          NMG expects <b>mobile app</b> users to exercise judgment regarding their expertise and, when necessary, recommends further education prior the implementation of any new procedure.
+          Additionally, NMG makes no representations or warranties about any other website that you may choose to access through <b>this website</b>;
+          links provided by NMG to such websites are provided solely for your convenience.
+          NMG expects <b>website</b> users to exercise judgment regarding their expertise and, when necessary, recommends further education prior the implementation of any new procedure.
           <br><br>
         </div>
       </div>
@@ -26,7 +26,7 @@
       <div class="block">
         <div>
           The Next Media Group (“NMG” or “we”) operates <b>DSODentist</b>, which is an educational and social networking platform that allows <b>dental students and professionals</b> to create unique personal profiles online in order to find and share a professional exchange with fellow <b>dental students and professionals</b>.
-          The services offered by <b>DSODentist</b> include any <b>DSODentist</b>-branded URL (the "<b>DSODentist Mobile App</b>"), DSODentist messaging services (including, without limitation, instant messaging, private messaging, and email services), <b>DSODentist</b> video services, <b></b>DSODentist developer services, <b>DSODentist</b> Mobile services, and any other features, content, or applications offered from time to time by NMG in connection with its business (collectively, the "<b>DSODentist</b> Services").
+          The services offered by <b>DSODentist</b> include any <b>DSODentist</b>-branded URL (the "<b>DSODentist website</b>"), DSODentist messaging services (including, without limitation, instant messaging, private messaging, and email services), <b>DSODentist</b> video services, <b></b>DSODentist developer services, <b>DSODentist</b> Mobile services, and any other features, content, or applications offered from time to time by NMG in connection with its business (collectively, the "<b>DSODentist</b> Services").
           <b>DSODentist</b> Services are hosted in the United States.
           <br><br>
 
@@ -121,7 +121,7 @@
           <b>6.1</b>
           NMG does not claim any ownership rights in the text, files, images, photos, video, sounds, musical works, works of authorship, applications, or any other materials (collectively, "Content") that you transmit, submit, display or publish (“post”) on, through, or in connection with <b>DSODentist</b>.
           After posting your Content on, through or in connection with <b>DSODentist</b>, you continue to retain any such rights that you may have in your Content, subject to the limited license herein.
-          By posting any Content on, through or in connection with <b>DSODentist</b>, you hereby grant to NMG a limited license to use, modify, delete from, add to, publicly perform, publicly display, reproduce, and distribute such Content solely on, through or in connection with <b>DSODentist</b>, including, without limitation, through <b>DSODentist</b> to applications, widgets, <b>mobile apps</b>, or mobile, desktop, or other services which are linked with your <b>DSODentist</b> account (collectively, “Linked Services”), including, without limitation, distributing part or all of <b>DSODentist</b> and any Content included therein, in any media formats and through any media channels, except that Content marked “private” will not be distributed by NMG outside <b>DSODentist</b> and Linked Services.
+          By posting any Content on, through or in connection with <b>DSODentist</b>, you hereby grant to NMG a limited license to use, modify, delete from, add to, publicly perform, publicly display, reproduce, and distribute such Content solely on, through or in connection with <b>DSODentist</b>, including, without limitation, through <b>DSODentist</b> to applications, widgets, <b>websites</b>, or mobile, desktop, or other services which are linked with your <b>DSODentist</b> account (collectively, “Linked Services”), including, without limitation, distributing part or all of <b>DSODentist</b> and any Content included therein, in any media formats and through any media channels, except that Content marked “private” will not be distributed by NMG outside <b>DSODentist</b> and Linked Services.
           This limited license does not grant NMG the right to sell or otherwise distribute your Content outside of DSODentist or Linked Services.
           After you remove your Content from DSODentist, we will cease distribution as soon as practicable, and at such time when distribution ceases, the license will terminate.
           If after we have distributed your Content outside of <b>DSODentist</b>, you change the Content’s privacy setting to “private,” we will cease distribution of such “private” Content outside of <b>DSODentist</b> as soon as practicable after you make the change.
@@ -140,7 +140,7 @@
           <b>6.4</b>
           <b>DSODentist</b> contains Content of NMG ("NMG Content").
           NMG Content is protected by copyright, trademark, patent, trade secret and other laws, and NMG owns and retains all rights in the NMG Content and <b>DSODentist</b>.
-          NMG hereby grants you a limited, revocable, nonsublicensable license to reproduce and display the NMG Content (excluding any software code) solely for your personal use in connection with viewing <b>DSODentist mobile app</b> and using <b>DSODentist</b> Services.
+          NMG hereby grants you a limited, revocable, nonsublicensable license to reproduce and display the NMG Content (excluding any software code) solely for your personal use in connection with viewing <b>DSODentist website</b> and using <b>DSODentist</b> Services.
           <br><br>
 
           <b>6.5</b>
@@ -255,7 +255,7 @@
           <b>8.16</b>
           violates or attempts to violate the privacy rights, publicity rights, copyrights, trademark rights, contract rights or any other rights of any person.
           <br><br>
-          The following are examples of the kind of activity that is illegal or prohibited on <b>DSODentist Mobile app</b> and through your use of <b>DSODentist</b> Services.
+          The following are examples of the kind of activity that is illegal or prohibited on <b>DSODentist website</b> and through your use of <b>DSODentist</b> Services.
           NMG reserves the right to investigate and take appropriate legal action against anyone who, in NMG's sole discretion, violates this provision, including, without limitation, terminating your Membership and/or reporting such activity or Content to law enforcement authorities.
           Prohibited activity includes, but is not limited to:
           <br><br>
@@ -373,7 +373,7 @@
         </p>
         <div>
           Linked Services created by third party developers may be available on, through or in connection with <b>DSODentist</b>.
-          Linked Services include applications, <b>mobile apps</b>, desktop, wireless, mobile and other services available from third parties which can be installed onto your <b>DSODentist</b> profile or shared with other Users on <b>DSODentist</b> or which may link to your <b>DSODentist</b> account from outside of <b>DSODentist</b>.
+          Linked Services include applications, <b>websites</b>, desktop, wireless, mobile and other services available from third parties which can be installed onto your <b>DSODentist</b> profile or shared with other Users on <b>DSODentist</b> or which may link to your <b>DSODentist</b> account from outside of <b>DSODentist</b>.
           Linked Services may use your <b>DSODentist</b> profile information, connections, and/or other profile content on the Linked Service and share activity events between DSODentist and the Linked Service (depending on the features the Linked Service chooses to make available).
           <br><br>
 
@@ -414,9 +414,9 @@
         <div>
           NMG is not responsible for and makes no warranties, express or implied, as to the User Content or the accuracy and reliability of the User Content posted through or in connection with <b>DSODentist</b> or Linked Services, by Users of <b>DSODentist</b> or Linked Services, and such User Content does not necessarily reflect the opinions or policies of NMG.
           In addition, NMG is not responsible for any damage, injury or loss caused by Users of <b>DSODentist</b> or by any of the equipment or programming associated with or utilized in <b>DSODentist</b> or Linked Services.
-          Profiles and Linked Services created and posted by Members on, though or in connection with <b>DSODentist</b> may contain links to other <b>mobile apps</b> or services.
-          NMG is not responsible for the Content, accuracy or opinions expressed on such <b>mobile apps</b> and services, and such <b>mobile apps</b> and services are not necessarily investigated, monitored or checked for accuracy or completeness by NMG.
-          Inclusion of any linked <b>mobile app</b> or service on <b>DSODentist</b> does not imply approval or endorsement of the linked <b>mobile app</b> or service by NMG.
+          Profiles and Linked Services created and posted by Members on, though or in connection with <b>DSODentist</b> may contain links to other <b>websites</b> or services.
+          NMG is not responsible for the Content, accuracy or opinions expressed on such <b>websites</b> and services, and such <b>websites</b> and services are not necessarily investigated, monitored or checked for accuracy or completeness by NMG.
+          Inclusion of any linked <b>website</b> or service on <b>DSODentist</b> does not imply approval or endorsement of the linked <b>website</b> or service by NMG.
           When you access these third party <b>apps</b> and services, you do so at your own risk.
           NMG takes no responsibility for third party advertisements or Linked Services that are posted on, through or in connection with <b>DSODentist</b> or Linked Services, nor does it take any responsibility for the goods or services provided by these third parties.
           NMG is not responsible for the conduct, whether online or offline, of any User of <b>DSODentist</b> or Linked Services.
