--- a/src/app/shared/components/latest/latest.component.html
+++ b/src/app/shared/components/latest/latest.component.html
@@ -6,6 +6,8 @@
       <dsod-rating [avgRating]="latestTopics[0].avgCommentRating" readingType="short" [clickAble]="true" [contentId]="latestTopics[0].id"
         [title]="latestTopics[0].title" [commentsCount]="latestTopics[0].countOfComment" [sponsorName]="sponsorName"></dsod-rating>
     </div>
+
+    <!-- DEBUG URL - {{getImageUrl(latestTopics[0].featuredMedia.code.original)}} -->
     <div *ngIf="latestTopics[0].featuredMedia" class="latest-block-thumbnail" (click)="navigateTo(latestTopics[0])">
       <img *ngIf="latestTopics[0].featuredMedia?.type === '1'" class="featured-img img-fluid" [src]="getImageUrl(latestTopics[0].featuredMedia.code.original)" alt="Feautred Thumbnail Large">
       <video *ngIf="latestTopics[0].featuredMedia?.type === '3'" class="featured-video" width="100%" controls>
@@ -16,6 +18,7 @@
         <img src="assets/images/icons/{{latestTopics[0].contentTypeName}}.png" alt="">
       </a>
     </div>
+
     <div class="latest-block-caption" [ngClass]="{'aln':sponsorName=='ALN','nbl':sponsorName=='NBL','gsk':sponsorName=='GSK'}">
       <h4>{{latestTopics[0].title}}</h4>
     </div>
